--- a/src/app/user-activity-container/footer/footer.component.html
+++ b/src/app/user-activity-container/footer/footer.component.html
@@ -5,11 +5,10 @@
             <small class="fs-5"> Created by : Vikas Dhangar</small>
         </div>
         <div class="social-icons d-flex justify-content-around align-self-stretch">
-            <a class="bi bi-github mx-3" href="https://github.com/parichaygupta" target="_blank"></a>
-            <a class="bi bi-linkedin mx-3" href="https://linkedin.com/in/parichay-gupta" target="_blank"></a>
-            <a class="bi bi-globe mx-3" href="https://parichaygupta.github.io/my-portfolio" target="_blank"></a>
-            <a class="bi bi-instagram mx-3" href="https://instagram.com/parichay.gupta" target="_blank"></a>
-            <a class="bi bi-whatsapp mx-3" href="https://wa.me/+917737424939" target="_blank"></a>
+            <a class="bi bi-github mx-3" href="https://github.com/vikasdhangar" target="_blank"></a>
+            <a class="bi bi-linkedin mx-3" href="https://linkedin.com/in/vikas-dhangar" target="_blank"></a>
+            <a class="bi bi-globe mx-3" href="https://vikas2005714.github.io/my-portfolio" target="_blank"></a>
+            <a class="bi bi-whatsapp mx-3" href="https://wa.me/+9356715097" target="_blank"></a>
         </div>
     </div>
 </footer>
